data/all_generated_tests/raw_wast_tests/br_TypeMismatchinControlFlowInstructions_1063.wast
;; 4. **Test for Invalid Operand Stack After a Branch:**    Construct a block that requires two `i32` operands. Use a `br` instruction to exit the block early but only provide one `i32` operand. Verify if the implementation correctly signals a stack underflow.

(assert_invalid
  (module
    (func
      (block (result i32 i32)
        (i32.const 0)
        (br 0) 
      )
    )
  )
  "type mismatch"
)